# N8N-Agent-Workflow

./: .env.example  .gitignore  Amdocs_PLDT.json  INTEGRATION.md  My workflow.json  NEW_FEATURES.md  PRODUCTION_GUIDE.md  QUICKSTART.md  SETUP.md  TEST_GUIDE.md  UI_UX_IMPROVEMENTS_SUMMARY.md  USER_GUIDE.md  cleanup.sh  docker-compose.yml  package-lock.json  package.json  readme.md  start.sh  test-integration.sh  test_payload.json
ChatBotApp/: .dockerignore  .gitignore  COMPONENT_SHOWCASE.md  CSS_REFERENCE.md  DESIGN_SYSTEM.md  Dockerfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README_PLDT.md  REFACTORING_SUMMARY.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
ChatBotApp/.next/dev/: prerender-manifest.json  trace
ChatBotApp/src/: App.tsx  index.css  types.ts
ChatBotApp/src/components/: AICallCenter.tsx  AudioPlayer.tsx  AuthForm.tsx  BalanceDisplay.tsx  ChatContainer.tsx  ChatInput.tsx  MessageBubble.tsx  TicketManager.tsx  TypingIndicator.tsx  VoiceRecorder.tsx  types.ts
ChatBotApp/src/design-system/: tokens.ts
ChatBotApp/src/hooks/: useAudioPlayer.ts
ChatBotApp/src/lib/: api.ts  (+1 more)
backend/: Dockerfile  chat_history.db  main.py  pyproject.toml  record_test.py  requirements.txt  test_pldt_api.py  test_webhooks.py
backend/app/: 'use clientDELETE'.ts  agent.py  auth.py  database.py  mock_api.py  models.py  n8n_api.py  pldt_api.py  routes_auth.py  routes_balance.py  routes_calls.py  routes_tickets.py  stt.py  tts.py
data/: billing.csv  customers.csv  knowledge_base.json  network_status.csv  tickets.csv
(+52 files in other folders)
